# safety-residual-space

./: .gitignore  README.md  pyproject.toml
artifacts/: all_comp_accuracies.json  all_comp_loglikelihoods.json  average_relevance_by_layer.json  base-dpo_metrics_by_exposure.csv  base-ssft_metrics_by_exposure.csv  base-ssft_metrics_by_exposure_cls.csv  best_comp_indices.json  first_comp_accuracies.json  relevance.pt
data/: add_moderation.csv  gcg_prompts.csv  gptfuzz_templates.csv  renellm_prompts.csv
scripts/: 1.make_jailbreaks.sh  2.trigger_removal_attack.sh  3.prepare_dpo_dataset.sh  4.evaluate_strong_reject.sh  5.run_safety_fine_tuning.sh  6.rank_safety_residual_space.sh
src/experiments/: intervention.py  output_prediction_with_components.py  perplexity_evaluation.py  plrp_relevance_components.py  plrp_relevance_tokens.py  rank_safety_residual_space.py  visualize_data_division.py  visualize_plrp_relevance_heatmap.py
src/jailbreaks/: codechaeleom.py  flipattack.py  gcg.py  gptfuzz.py  pair.py  renellm.py  simple.py  strong_reject.py  trigger_removal.py
src/strong_reject/: evaluate.py  generate.py  jailbreaks.py  load_datasets.py
src/strong_reject/eval_files/: judge_templates.json
src/utils/: chat.py  dpo_dataset.py  evaluate.py  extract.py  guard.py  oailib.py  ppl_checker.py  safety_dpo.py  safety_sft.py  ssft_dataset.py
