[tool.poetry]
name = "toxicity"
version = "0.1.0"
description = ""
authors = ["Anomaly <anomaly@anomaly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diskcache = "^5.6.3"
openai = "^1.47.1"
tqdm = "^4.66.5"
datasets = "^3.0.0"
ipdb = "^0.13.13"
weave = "^0.51.8"
pandas = "^2.2.3"
torch = {version = "^2.4.1+cu124", source = "pytorch-gpu-src"}
torchvision = {version = "^0.19.1+cu124", source = "pytorch-gpu-src"}
torchaudio = {version = "^2.4.1+cu124", source = "pytorch-gpu-src"}
transformers = "^4.43.42"
accelerate = ">=0.26.0"
google-cloud-translate = "^3.16.0"
google-api-python-client = "^2.149.0"
peft = "^0.13.1"
python-dotenv = "^1.0.1"
sentencepiece = "^0.2.0"
einops = "^0.8.0"
sentence-transformers = "^3.1.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
torchtune = "^0.3.1"
torchao = {version = "^0.6.1+cu124", source = "pytorch-gpu-src"}
bitsandbytes = "^0.44.1"
trl = "^0.12.1"
deepspeed = "^0.15.3"
wandb = "^0.18.5"
transformer-lens = "^2.9.1"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
lxt = "^0.6.1"
notebook = "^7.3.2"
imgcat = "^0.6.0"
nanogcg = "^0.2.3"

[project.optional-dependencies]
dev = [
  "black",
  "build",
  "flake8",
  "ipython",
  "isort",
  "jupyterlab",
  "seaborn",
  "statsmodels"
]
docs = [
  "sphinx",
  "pydata-sphinx-theme"
]

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["src"]
force_sort_within_sections = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
